@@ -1,0 +1,13 @@
+<component name="libraryTable">
+  <library name="Maven: com.google.android:android-test:4.0.1.2">
+    <CLASSES>
+      <root url="jar://$MAVEN_REPOSITORY$/com/google/android/android-test/4.0.1.2/android-test-4.0.1.2.jar!/" />
+    </CLASSES>
+    <JAVADOC>
+      <root url="jar://$MAVEN_REPOSITORY$/com/google/android/android-test/4.0.1.2/android-test-4.0.1.2-javadoc.jar!/" />
+    </JAVADOC>
+    <SOURCES>
+      <root url="jar://$MAVEN_REPOSITORY$/com/google/android/android-test/4.0.1.2/android-test-4.0.1.2-sources.jar!/" />
+    </SOURCES>
+  </library>
+</component>
